--- a/marketing-resource/xml/WD/Webdirect.resx
+++ b/marketing-resource/xml/WD/Webdirect.resx
@@ -157,7 +157,7 @@
     <value>Azure prepaid product purchase application form | Azure</value>
   </data>
   <data name="SUPPORT_FAQ_LABEL" xml:space="preserve">
-    <value>FAQs</value>
+    <value>FAQ</value>
   </data>
   <data name="SUPPORT_LEGAL_LABEL" xml:space="preserve">
     <value>Legal information</value>
