--- a/marketing-resource/xml/WD/Webdirect.resx
+++ b/marketing-resource/xml/WD/Webdirect.resx
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -59,46 +59,46 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata" id="root">
-    <xsd:import namespace="http://www.w3.org/XML/1998/namespace"/>
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
         <xsd:choice maxOccurs="unbounded">
           <xsd:element name="metadata">
             <xsd:complexType>
               <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0"/>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
               </xsd:sequence>
-              <xsd:attribute name="name" use="required" type="xsd:string"/>
-              <xsd:attribute name="type" type="xsd:string"/>
-              <xsd:attribute name="mimetype" type="xsd:string"/>
-              <xsd:attribute ref="xml:space"/>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="assembly">
             <xsd:complexType>
-              <xsd:attribute name="alias" type="xsd:string"/>
-              <xsd:attribute name="name" type="xsd:string"/>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="data">
             <xsd:complexType>
               <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
-                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2"/>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1"/>
-              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3"/>
-              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4"/>
-              <xsd:attribute ref="xml:space"/>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="resheader">
             <xsd:complexType>
               <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required"/>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
             </xsd:complexType>
           </xsd:element>
         </xsd:choice>
@@ -117,11 +117,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ACITVATION_CODE_DB_ERROR_MSG" xml:space="preserve">
+    <value>Database error!</value>
+  </data>
+  <data name="ACITVATION_CODE_ERROR_MSG" xml:space="preserve">
+    <value>Activation code error!</value>
+  </data>
+  <data name="ACITVATION_CODE_FORMAT_ERROR_MSG" xml:space="preserve">
+    <value>Activation code format error!</value>
+  </data>
+  <data name="ACTIVATION_CODE_ENTER_LABEL" xml:space="preserve">
+    <value>Please enter your activation code:</value>
+  </data>
+  <data name="ACTIVATION_CODE_LABEL" xml:space="preserve">
+    <value>Activation Code</value>
+  </data>
+  <data name="ACTIVATION_CODE_SUBMIT_LABEL" xml:space="preserve">
+    <value>Submit</value>
+  </data>
   <data name="AZURE_SUPPORT_LABEL" xml:space="preserve">
-    <value>Azure support</value>
+    <value>Azure Support</value>
   </data>
   <data name="BUY_PIA_LABEL" xml:space="preserve">
-    <value>Standard Pay-in-Advance purchase</value>
+    <value>Standard Pay-in-Advance Purchase</value>
   </data>
   <data name="BUY_PIA_LABEL_SHORT" xml:space="preserve">
     <value>Purchase</value>
@@ -145,16 +163,19 @@
     <value>Azure trial application form | Azure</value>
   </data>
   <data name="GO_TO_REFILL_LABEL" xml:space="preserve">
-    <value>Subscriptions and Fapiaos</value>
+    <value>Account Portal</value>
   </data>
   <data name="HOMEPAGE_LABEL" xml:space="preserve">
     <value>Homepage</value>
   </data>
   <data name="LOGIN_IBIZA_LABEL" xml:space="preserve">
-    <value>Sign in to Azure portal</value>
+    <value>Azure Portal</value>
+  </data>
+  <data name="MUST_ENTER_ACTIVATION_CODE_MSG" xml:space="preserve">
+    <value>Please input one activation code!</value>
   </data>
   <data name="OTHER_REGION_LABEL" xml:space="preserve">
-    <value>Visit global version of Azure website</value>
+    <value>Visit Global Azure</value>
   </data>
   <data name="PIA_PAGE_META_DESC" xml:space="preserve">
     <value>Azure Pay-in-Advance product purchase application form | Azure</value>
@@ -166,7 +187,7 @@
     <value>FAQ</value>
   </data>
   <data name="SUPPORT_LEGAL_LABEL" xml:space="preserve">
-    <value>Legal information</value>
+    <value>Legal</value>
   </data>
   <data name="TRUST_CENTER_LABEL" xml:space="preserve">
     <value>Trust Center</value>
