Update SHD, Email, WD translation.

--- a/marketing-resource/xml/SHD/SHD.resx
+++ b/marketing-resource/xml/SHD/SHD.resx
@@ -127,7 +127,7 @@
     <value>Azure service status report</value>
   </data>
   <data name="AZURE_SUPPORT_OPTION" xml:space="preserve">
-    <value>Azure support options</value>
+    <value>Azure Support Options</value>
   </data>
   <data name="CHINA_EAST" xml:space="preserve">
     <value>China East</value>
