--- a/marketing-resource/xml/WD/Webdirect.resx
+++ b/marketing-resource/xml/WD/Webdirect.resx
@@ -157,10 +157,10 @@
     <value>Privacy</value>
   </data>
   <data name="FREE_TRIAL_PAGE_META_DESC" xml:space="preserve">
-    <value>Azure trial application form | Azure</value>
+    <value>Azure 1RMB Trial application form | Azure</value>
   </data>
   <data name="FREE_TRIAL_PAGE_TITLE" xml:space="preserve">
-    <value>Azure trial application form | Azure</value>
+    <value>Azure 1RMB Trial application form | Azure</value>
   </data>
   <data name="GO_TO_REFILL_LABEL" xml:space="preserve">
     <value>Account Portal</value>
